src/apps/ingresses/hashi-vault.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorp-vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault-oci.naser.cloud`)
      priority: 10
      services:
        - name: hashicorp-vault-ui
          port: 8200
  tls:
    secretName: letsencrypt-wildcard-cert-naser.cloud
