src/apps/ingresses/pgadmin-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin-oci.naser.cloud`)
      priority: 10
      services:
        - name: pgadmin-pgadmin4
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-naser.cloud
